<resources>
    <string name="app_name">android_pro</string>

    <string name="mobile_number">Mobile Number</string>

    <string name="street_address">Street Address</string>

    <string name="set_as_default_delivery_address">Set as default delivery Address</string>

    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="back">back</string>
    <string name="district">District</string>
</resources>