<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="4dp"
            android:background="@color/colorAccent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_contactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:fontFamily="casual"
                android:textStyle="bold|italic"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/txt_phoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:fontFamily="casual"
                android:textStyle="bold|italic"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/txt_telphoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephone_number"
                android:fontFamily="casual"
                android:textStyle="bold|italic"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:fontFamily="casual"
                android:textStyle="bold|italic"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/txt_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:fontFamily="casual"
                android:textStyle="bold|italic"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/txt_postal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postal_code"
                android:fontFamily="casual"
                android:textStyle="bold|italic"
                android:textColor="@android:color/white"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>