<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    tools:context=".UpdateDelivery">
<View
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="50dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:elevation="8dp"
        android:id="@+id/input_layer1"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_below="@+id/select_product_image"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/contact_name_update"
            android:inputType="text"
            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:layout_width="match_parent"
            android:hint="@string/contact_name"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layer2"
        android:layout_below="@+id/input_layer1"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/mobile_num_update"
            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:hint="@string/mobile_number"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layer3"
        android:layout_below="@+id/input_layer2"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/phone_num_update"
            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:hint="@string/phone_number"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layer4"
        android:layout_below="@+id/input_layer3"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/address_update"
            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:hint="@string/street_address"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layer5"
        android:layout_below="@+id/input_layer4"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/district_update"
            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:hint="@string/district"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layer6"
        android:layout_below="@+id/input_layer5"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/postal_code_update"
            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:hint="@string/postal_code"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="180dp"
        android:background="@drawable/button_background"
        android:padding="4dp"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/input_layer6"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:text="Update Details"
        />

</RelativeLayout>